kubernetes/services-aks.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
    version: blue
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/"
spec:
  selector:
    app: frontend
    version: blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: LoadBalancer
